[tool.poetry]
name = "bloodhoundcli"
version = "0.1.26"
description = ""
authors = ["dadevel <dadevel@disroot.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bloodhoundcli"}]

[tool.poetry.scripts]
bloodhoundcli = "bloodhoundcli.main:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.1"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
