[project]
name = "bloodhoundcli"
version = "0.1.33"
description = ""
authors = [{name = "dadevel",email = "dadevel@disroot.org"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.0",
    "requests>=2.34.2",
]

[project.scripts]
bloodhoundcli = "bloodhoundcli.main:main"
